--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>
-            Hello, World! 123
+            Hello, World! 
         </h1>
     </body>
 </html>
