--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <h1>
-            Hello, World! 
+            Welcome to my website!
         </h1>
+        Hello, World! 
     </body>
 </html>
